Fixed missing border on weather box

--- a/Chamber/css/medium.css
+++ b/Chamber/css/medium.css
@@ -128,6 +128,8 @@
     .weather {
         grid-column: 3/4;
         grid-row: 5/6;
+        border-top: solid rgba(37, 59, 83, 0.8);
+        border-left: solid rgba(37, 59, 83, 0.8);
     }
 
     .logo img {
